--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -7,6 +7,7 @@ MacIntel_task:
     brew install objc-codegenutils objc-run gh create-dmg
     brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc
     brew install iltommi/brews/hdf4
+    brew link libomp
     mkdir -p build && cd build
     cmake ..
     make -j$(sysctl -n hw.ncpu) install
@@ -26,6 +27,7 @@ MacM1_task:
     brew install objc-codegenutils objc-run gh create-dmg
     brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc
     brew install iltommi/brews/hdf4
+    brew link libomp
     mkdir -p build && cd build
     cmake ..
     make -j$(sysctl -n hw.ncpu) install
@@ -133,3 +135,4 @@ Cross64_task:
     cp Neutrino*.exe Neutrino*.zip ..      
   artifacts:
     path: "Neutrino-*.*"
+
