--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -7,7 +7,7 @@ MacIntel_task:
     brew install objc-codegenutils objc-run gh create-dmg
     brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc
     brew install iltommi/brews/hdf4
-    brew link libomp
+    brew link --force libomp
     mkdir -p build && cd build
     cmake ..
     make -j$(sysctl -n hw.ncpu) install
@@ -27,7 +27,7 @@ MacM1_task:
     brew install objc-codegenutils objc-run gh create-dmg
     brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc
     brew install iltommi/brews/hdf4
-    brew link libomp
+    brew link --force libomp
     mkdir -p build && cd build
     cmake ..
     make -j$(sysctl -n hw.ncpu) install
