--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -10,8 +10,8 @@ macIntel_task:
     cmake .. -DCMAKE_CXX_FLAGS="-I$(brew --prefix libomp)/include" -DCMAKE_EXE_LINKER_FLAGS="-L$(brew --prefix libomp)/lib"
     make -j$(sysctl -n hw.ncpu) install
     ../resources/macPackage/prepareapp.sh
-#     gh release upload --clobber latest Neutrino*.dmg
-#     gh release edit latest -n "build info: https://cirrus-ci.com/build/$CIRRUS_BUILD_ID"
+    gh release upload --clobber latest Neutrino*.dmg
+    gh release edit latest -n "build info: https://cirrus-ci.com/build/$CIRRUS_BUILD_ID"
     cp Neutrino-*.dmg ..
     echo "https://api.cirrus-ci.com/v1/artifact/build/$CIRRUS_BUILD_ID/package.zip"
   package_artifacts:
@@ -29,7 +29,7 @@ macM1_task:
     cmake .. -DCMAKE_CXX_FLAGS="-I$(brew --prefix libomp)/include" -DCMAKE_EXE_LINKER_FLAGS="-L$(brew --prefix libomp)/lib"
     make -j$(sysctl -n hw.ncpu) install
     ../resources/macPackage/prepareapp.sh
-#     gh release upload --clobber latest Neutrino*.dmg
+    gh release upload --clobber latest Neutrino*.dmg
     cp Neutrino-*.dmg ..
   package_artifacts:
     path: "Neutrino-*.*"
@@ -66,7 +66,7 @@ win32_task:
     mkdir build && cd build
     mingw32-cmake -DNEUTRINO_SKIP_PLUGINS='Function' ..
     make -j2 package
-#     gh release upload --clobber latest Neutrino*.exe
+    gh release upload --clobber latest Neutrino*.exe
     cp Neutrino*.* ..
   package_artifacts:
     path: "Neutrino-*.*"
@@ -104,7 +104,7 @@ win64_task:
     mkdir build && cd build
     mingw64-cmake ..
     make -j2 package
-#     gh release upload --clobber latest Neutrino*.exe
+    gh release upload --clobber latest Neutrino*.exe
     cp Neutrino*.* ..
   package_artifacts:
     path: "Neutrino-*.*"
@@ -125,7 +125,7 @@ AppImage_task:
     cmake -DCMAKE_INSTALL_PREFIX=/usr ..
     make -j2 install DESTDIR=AppDir
     ../linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt --output appimage --custom-apprun=../resources/linuxPackage/AppRun --icon-file=../resources/icons/neutrino.svg
-#     gh release upload --clobber latest Neutrino-*.AppImage
+    gh release upload --clobber latest Neutrino-*.AppImage
     cp Neutrino-*.AppImage ..
   package_artifacts:
     path: "Neutrino-*.AppImage"
@@ -141,7 +141,7 @@ ubuntu_task:
     mkdir build && cd build
     cmake ..
     make -j2 package
-#     gh release upload --clobber latest Neutrino-*.deb
+    gh release upload --clobber latest Neutrino-*.deb
     cp Neutrino*.* ..
   package_artifacts:
     path: "Neutrino-*.*"
@@ -157,7 +157,7 @@ debian_task:
     mkdir build && cd build
     cmake ..
     make -j2 package
-#     gh release upload --clobber latest Neutrino-*.deb
+    gh release upload --clobber latest Neutrino-*.deb
     cp Neutrino*.* ..
   package_artifacts:
     path: "Neutrino-*.*"
@@ -173,7 +173,7 @@ mint_task:
     mkdir build && cd build
     cmake ..
     make -j2 package
-#     gh release upload --clobber latest Neutrino-*.deb
+    gh release upload --clobber latest Neutrino-*.deb
     cp Neutrino*.* ..
   package_artifacts:
     path: "Neutrino-*.*"
@@ -189,7 +189,7 @@ fedora_task:
     mkdir build && cd build
     cmake ..
     make -j2 package
-#     gh release upload --clobber latest Neutrino-*.rpm
+    gh release upload --clobber latest Neutrino-*.rpm
     cp Neutrino*.* ..
   package_artifacts:
     path: "Neutrino-*.*"
@@ -207,7 +207,7 @@ opensuse_task:
     mkdir build && cd build
     cmake ..
     make -j2 package
-#     gh release upload --clobber latest Neutrino-*.rpm
+    gh release upload --clobber latest Neutrino-*.rpm
     cp Neutrino*.* ..
   package_artifacts:
     path: "Neutrino-*.*"
@@ -223,7 +223,7 @@ upload_task:
     image: ubuntu:22.04
   script: |
     apt-get update -qq
-    apt-get install -yy gh git wget zip findutils
+    apt-get install -yy gh wget zip findutils
     echo $CIRRUS_BUILD_ID
     wget https://api.cirrus-ci.com/v1/artifact/build/$CIRRUS_BUILD_ID/package.zip
     unzip package.zip -d package
