--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -214,10 +214,10 @@ upload_task:
     apt-get update -qq
     apt-get install -yy git gh wget zip findutils
     echo $CIRRUS_BUILD_ID
-    wget https://api.cirrus-ci.com/v1/artifact/build/$CIRRUS_BUILD_ID/package.zip
+    wget -q https://api.cirrus-ci.com/v1/artifact/build/$CIRRUS_BUILD_ID/package.zip
     unzip package.zip -d package
     git config --global user.name "Cirrus CI"
-    git config --global user.name "hello@cirruslabs.org"
+    git config --global user.email "hello@cirruslabs.org"
     git remote set-url origin https://$GITHUB_TOKEN@github.com/NeutrinoToolkit/Neutrino
     gh release delete latest -y
     git push origin :refs/tags/latest;
