--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -229,7 +229,7 @@ upload_task:
     gh release delete latest -y || true
     git push origin :refs/tags/latest;
     git tag -fa latest -m "Commit $(git rev-list HEAD --count)\nBuild info: https://cirrus-ci.com/build/$CIRRUS_BUILD_ID"
-    git push --follow-tags
+    git push --follow-tags origin HEAD:master 
     gh release create latest --generate-notes
     gh release upload --clobber latest package/*
     
